unpackaged/main/default/objects/Outstanding_Investigation__c/Outstanding_Investigation__c.object-meta.xml
<CustomObject>
    <label>Outstanding Investigation</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Outstanding Investigation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstanding Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>