unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outstanding Investigations</relationshipLabel>
    <relationshipName>Outstanding_Investigations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>