unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Asana_Task__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task__c</fullName>
    <label>Asana Task</label>
    <type>Url</type>
</CustomField>