unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Blood_Test_Required__c.field-meta.xml
<CustomField>
    <fullName>Blood_Test_Required__c</fullName>
    <label>Blood Test Required</label>
    <length>60</length>
    <type>Text</type>
</CustomField>