unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must choose a doctor.</errorMessage>
        <filterItems>
            <field>User.GMC_Reference_Number__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Outstanding_Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>