unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Medications_Hold__c.field-meta.xml
<CustomField>
    <fullName>Medications_Hold__c</fullName>
    <label>Medications Hold</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Until blood test</fullName>
            </value>
            <value>
                <fullName>Until doctor review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>