unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Patient_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Patient_Risk_Flag__c</fullName>
    <formula>IF (TEXT( Account__r.Risk_Level__c ) = &quot;High&quot;,

IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),

IF (TEXT(Account__r.Risk_Level__c ) = &quot;Medium&quot;,

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;),

IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;)))</formula>
    <label>Patient Risk Flag</label>
    <type>Text</type>
</CustomField>