unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Patient_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Patient_Risk_Level__c</fullName>
    <formula>TEXT( Account__r.Risk_Level__c )</formula>
    <label>Patient Risk Level</label>
    <type>Text</type>
</CustomField>