unpackaged/main/default/objects/Outstanding_Investigation__c/fields/Patient_Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Risk_Notes__c</fullName>
    <formula>Account__r.Risk_Notes__c</formula>
    <label>Patient Risk Notes</label>
    <type>Text</type>
</CustomField>