unpackaged/main/default/objects/Outstanding_Investigation__c/validationRules/Doctor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Doctor_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Doctor__c)</errorConditionFormula>
    <errorDisplayField>Doctor__c</errorDisplayField>
    <errorMessage>Please set Doctor field</errorMessage>
</ValidationRule>