unpackaged/main/default/objects/Outstanding_Investigation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Blood_Test_Required__c</columns>
    <columns>Medications_Hold__c</columns>
    <columns>Doctor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>